--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -49,7 +49,7 @@
                         <li id="recommended" data-target="#level2-recommended"><a href="#">이럴 때 빌려봐<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
                         <li><a href="#">re:flex 소개</a></li>
                         <li><a href="#">로그인->마이페이지</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
+                        <li><a href="#">로그인->관리자페이지</a></li>
                         <li><a href="#">고객서비스(FAQ)</a></li>
                         <li><a href="#">고객서비스(FAQ)</a></li>
                         <li><a href="#">고객서비스(FAQ)</a></li>
