--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -31,7 +31,7 @@
             </div>
             <div id="menu" class="col-md-4">
                 <ul class="list-unstyled list-inline text-right">
-                    <li><a href="#">로그인</a></li>
+                    <li><a href="#">테스트중</a></li>
                     <li>
                         <h2 class="sr-only">장바구니</h2>
                         <a href="#" aria-label="cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
