add customer page
login / edit info / sign up

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -32,7 +31,10 @@
             </div>
             <div id="menu" class="col-md-4">
                 <ul class="list-unstyled list-inline text-right">
-                    <li><a href="#">테스트중</a></li>
+                    <!-- 로그인시 li.login-hide안보이게 하고 li.login-show 보이게 -->
+                    <li class="login-hide"><a href="#">로그인</a></li>
+                    <li class="login-hide"><a href="#">회원가입</a></li>
+                    <li class="login-show"><a href="#">로그아웃</a></li>
                     <li>
                         <h2 class="sr-only">장바구니</h2>
                         <a href="#" aria-label="cart"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
@@ -48,20 +50,9 @@
                     <header></header>
                     <ul class="list-unstyled">
                         <li id="recommended" data-target="#level2-recommended"><a href="#">이럴 때 빌려봐<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+                        <li><a href="#">마이페이지</a></li>
+                        <li><a href="#">고객서비스(FAQ)</a></li>
                         <li><a href="#">re:flex 소개</a></li>
-                        <li><a href="#">로그인->마이페이지</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
-                        <li><a href="#">고객서비스(FAQ)</a></li>
                     </ul>
                 </nav>
                 <nav id="level2-recommended" class="sidemenu-wrapper">
@@ -72,12 +63,12 @@
                         </a>
                     </header>
                     <ul class="list-unstyled">
-                        <li><a href="view_list.html">반려동물</a></li>
-                        <li><a href="#">육아</a></li>
-                        <li><a href="#">파티</a></li>
-                        <li><a href="#">운동</a></li>
-                        <li><a href="#">여행</a></li>
-                        <li><a href="#">캠핑</a></li>
+                        <li><a href="view_list.html">반려동물과 함께 할 때</a></li>
+                        <li><a href="#">육아할 때</a></li>
+                        <li><a href="#">파티할 때</a></li>
+                        <li><a href="#">운동할 때</a></li>
+                        <li><a href="#">여행갈 때</a></li>
+                        <li><a href="#">캠핑갈 때</a></li>
                     </ul>
                 </nav>
             </div>
@@ -293,4 +284,3 @@
 
 </body>
 </html>
-
